# fortytwo-sim

./: pyproject.toml
fortytwo/: domino.py  player.py
tests/: test_domino.py
