[project]
name = "fortytwo-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "basedpyright>=1.28.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode="off"
reportUndefinedVariable=true
